--- a/src/index.css
+++ b/src/index.css
@@ -21,13 +21,15 @@
 
 /*Popup message on icon hover*/
 
+
+
 .popup-message {
   position: fixed;
   top: 20px;
   left: 50%;
   text-align: center;
   transform: translateX(-50%);
-  background-color: #00ff99;
+  background-color: #00be72;
   color: white;
   padding: 10px 20px;
   border-radius: 10px;
@@ -61,9 +63,7 @@ input:-webkit-autofill {
   filter: blur(10px);
 }
 
-/*CV Download Button*/
-
-.cv-btn {
+CV Download Button .cv-btn {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
