--- a/src/index.css
+++ b/src/index.css
@@ -98,6 +98,6 @@ input:-webkit-autofill {
     @apply bg-gradient-to-r text-transparent bg-clip-text from-[#42A6E3] to-[#00ff99] font-bold font-primary hover:from-[#00ff99] hover:to-[#42A6E3];
   }
   .section {
-    @apply py-8 lg:py-24 lg:h-screen flex items-center;
+    @apply my-8 lg:h-screen flex items-center;
   }
 }
